--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Vite + Mantine App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <section id="root" class="todoapp"></section>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
