--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
-    <title>Vite + Mantine App</title>
+    <title>TweedleDo Shopping List</title>
   </head>
   <body>
     <section id="root" class="todoapp"></section>
