--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <link rel="manifest" href="/src/manifest.json">
+    <link rel="icon" href="assets/favicon.ico">
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
     <title><%= title %></title>
+    <meta name="description" content="<%= title %>">
+    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/assets/icon.png" color="#033f63">
+    <meta name="theme-color" content="#033f63">
   </head>
   <body>
     <section id="root" class="todoapp"></section>
